Kubernetes/fastapi_deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      imagePullSecrets:
        - name: registry-secret  # секрет для доступа к приватному registry
      containers:
        - name: fastapi
          image: registry.thebull.ru/python/fastapi_course:latest
          ports:
            - containerPort: 8000
          command: ["uvicorn"]
          args: ["app.main:app", "--host", "0.0.0.0", "--port", "8000"]
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/ssl/fastapi  # каталог внутри контейнера, где будут лежать сертификаты
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: fastapi-tls  # тот самый TLS-секрет, созданный ранее


---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"      # HTTPS redirect
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fastapi.thebull.ru                              # домен для FastAPI
      secretName: fastapi-tls                             # секрет с сертификатом
  rules:
    - host: fastapi.thebull.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
